--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ easyocr
 requests 
 python-dotenv 
 httpx 
-torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu118  
+torch
+torchvision
+torchaudio
